# switchyard

./: .gitignore  ANALYSIS_INDEX.md  ARCH-REORG.md  BDD_TODO.md  BEST_EFFORT_COLLECTION.md  BUG-EXDEV-fallback-and-locking-warn.md  BUGS.md  BUG_FIX_TODO.md  CHANGELOG.md  CLEAN_CODE_REVIEW.md  CLEAN_CODE_TODO.md  CLIPPY_ACTION_PLAN.md  CODE_OF_CONDUCT.md  CODE_REVIEW_TODO.md  CONTRIBUTING.md  Cargo.toml  EDGE_CASES_AND_BEHAVIOR.md  ER_CAT.json  ER_CAT.md  EXPERIMENT_CONSTANTS_REVIEW.md  FS_BACKUP_RESTORE_AUDIT.md  GAPS.md  NOT_YET_TESTED_FS.md  POSSIBLE_FALSE_POSITIVES.md  PROMENANCE_INTEGRATION.md  PUBLISH_BLOCKERS.md  RC1_TODO.md  README.md  REEXPORTS_AND_FACADES.md  RELEASE_BLOCKER.md  RELEASE_BLOCKERS.md  RELEASE_BLOCKER_1.md  RELEASE_BLOCKER_2.md  RELEASE_BLOCKER_3.md  RELEASE_BLOCKER_4.md  REORG_TODO.md  SECURITY.md  SPEC.md  SPEC_CHECKLIST.md  SPEC_DELTA_V3.md  (+9 more)
CLIPPY/: 01-apply-handlers-handle_ensure_symlink.md  02-apply-handlers-handle_restore.md  03-apply-lock-acquire.md  04-apply-run.md  05-preflight-run.md  06-fs-restore-restore_impl.md  07-policy-gating-evaluate_action.md  08-preflight-rows-push_row_emit.md  10-overlaps-conflicts-analysis.md  TODO-ULTIMATE.md
DOCS/: AUDIT.md  AUDIT_SCHEMA_V2.md  BACKUPS_AND_RESTORE.md  EXIT_CODES_TIERS.md  GLOSSARY.md  GOLDEN_FIXTURES.md  OPERATOR_CHECKLISTS.md  PROVENANCE.md  REFERENCE_ERROR_CODES.md  REFERENCE_PREFLIGHT_SCHEMA.md  SMOKE_TESTS.md  backup-restore-design.md  best_effort_inventory.json
FAILING_TESTS/: NEW_PLAN.md  PARALLEL_CONCURRENCY_FINDINGS.md  ROOT_CAUSE_1.md  ROOT_CAUSE_2.md  ROOT_CAUSE_INDEX.md  TEST_1_ENOSPC_backup_restore.md  TEST_2_Ownership_strict_with_oracle_present.md  TEST_3_Attestation_apply_success.md  TEST_4_Sidecar_integrity_disabled.md  TEST_5_Smoke_OK_no_rollback.md
INVENTORY/: 35_FS_Mount_Checks.md  40_Policy_Ownership_and_Provenance.md  50_Recovery_Smoke_and_Auto_Rollback.md  55_Determinism_and_Redaction.md  65_Observability_Audit_and_Logging.md  80_FS_Backup_Retention_Prune.md  90_Observability_JSONL_File_Logging.md  95_Observability_Preflight_YAML.md  API_Attestation.md  API_SafePath.md  Determinism_Golden_Fixtures_and_CI_Gates.md  FS_Atomic_Symlink_Swap.md  FS_Backup_and_Sidecar.md  FS_Restore_and_Rollback.md  Infra_Rescue_Profile_Verification.md  NEW_TEMPLATE.md  Observability_Facts_Schema_Validation.md  Policy_Gating_and_Preflight.md  Policy_Node_Hazards_SuidSgid_Hardlinks.md  README.md  Safety_Exit_Codes.md  Safety_Locking_and_Concurrency.md
PLAN/: 00-charter.md  00-structure.md  10-architecture-outline.md  10-types-traits.md  12-api-module.md  15-policy-and-adapters.md  20-adapters.md  20-spec-traceability.md  30-delivery-plan.md  30-errors-and-exit-codes.md  40-facts-logging.md  40-quality-gates.md  45-preflight.md  50-risk-register.md  55-operational-bounds.md  60-rollback-exdev.md  65-rescue.md  70-pseudocode.md  70-status-cadence.md  80-review-instructions.md  90-implementation-instructions.md  90-implementation-tiers.md  README.md  TODO.md  _src-inventory.md
SPEC/: GLOSSARY.md  SPEC.md  SPEC_CHANGES_AI.md  SPEC_UPDATE_0001.md  SPEC_UPDATE_0002.md  audit_event.schema.json  audit_event.v2.schema.json  error_codes.toml  preflight.yaml  requirements.yaml  traceability.md
TESTPLAN/: TESTPLAN_README.md  TODO_TESTPLAN.md  TODO_TESTPLAN_V2.md  api_option_inventory.md  combinatorial_model.json  e2e_overview.md  environment_matrix.md  flakiness_and_repro.md  oracles_and_invariants.md  scheduling_and_cost.md  test_selection_matrix.md  traceability.md
book/: README.md  book.toml
examples/: 01_dry_run.rs  02_commit_with_lock.rs  03_rollback.rs  04_audit_and_redaction.rs  05_exdev_degraded.rs
html/: 404.html  architecture.html  faq.html  toc.js  (+10 more)
(+602 files in other folders)
