[package]
name = "switchyard"
version = "0.1.0"
edition = "2021"
description = "Switchyard library crate (monorepo skeleton)"
license = "GPL-3.0-or-later"

[lib]
name = "switchyard"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
uuid = { version = "1", features = ["v5"] }
base64 = "0.22"
rustix = { version = "0.38", features = ["fs"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
jsonschema = "0.17"
serial_test = "2"
