[package]
name = "switchyard"
version = "0.1.0"
edition = "2021"
description = "Switchyard library crate (monorepo skeleton)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/veighnsche/oxidizr-arch"
homepage = "https://veighnsche.github.io/oxidizr-arch/"
documentation = "https://docs.rs/switchyard"
readme = "README.md"
keywords = ["filesystem", "atomic", "swap", "reversible"]
categories = ["filesystem", "os::unix-apis"]
rust-version = "1.75"

# Keep the published crate small; crates.io serves README and links only.
exclude = [
  "/book/**",
  "/.github/**",
  "/scripts/**",
  "/target/**",
  "/golden-diff/**",
  "/**/*.log",
]

[badges]
github-actions = { repository = "veighnsche/oxidizr-arch", workflow = "Continuous Integration" }

[package.metadata.docs.rs]
all-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "switchyard"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
uuid = { version = "1", features = ["v5"] }
base64 = "0.22"
rustix = { version = "0.38", features = ["fs", "process"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
fs2 = "0.4"
xattr = "1"
tracing = { version = "0.1", optional = true }

[features]
# default = ["bdd"]
default = []
prod = []   # turns warnings into errors for high-signal lints
# Enable a simple file-backed JSONL sink for facts and audit streams
file-logging = []
bdd = []
envmeta = []

[dev-dependencies]
tempfile = "3"
jsonschema = "0.17"
serial_test = "2"
trybuild = "1"
async-trait = "0.1"
cucumber = { version = "0.20", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
path = "tests/bdd_main.rs"
harness = false
required-features = ["bdd"]
